<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020. Huawei Technologies Co., Ltd. All rights reserved.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/loginTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_margin="@dimen/standard_margin"
        android:textSize="@dimen/important_header_textsize"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/usernameEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/passwordEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <TextView
        android:id="@+id/loginMsgTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/incorrect_password"
        android:gravity="center"
        android:textColor="@color/colorAlert"
        android:visibility="gone"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/standart_header_textsize"/>

    <com.huawei.hms.support.hwid.ui.HuaweiIdAuthButton
        android:id="@+id/hwIdLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin" />

    <Button
        android:id="@+id/anonymousBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_anonymously"
        android:textAllCaps="false"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:textSize="@dimen/standart_sub_header_textsize"
        android:text="@string/first_time_here_sign_up"
        android:gravity="center" />

</LinearLayout>