<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020. Huawei Technologies Co., Ltd. All rights reserved.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateAccountFragment"
    android:layout_gravity="center"
    app:layout_anchorGravity="center">

    <TextView
        android:id="@+id/header_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="@dimen/important_header_textsize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/standard_margin"/>

    <TextView
        android:id="@+id/gender_question_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        android:text="@string/gender_question"
        android:textSize="@dimen/standart_header_textsize"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_tv"/>

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/more_than_standart_margin"
        android:entries="@array/gender_array"
        android:prompt="@string/choose_gender"
        app:layout_constraintLeft_toLeftOf="@id/gender_question_tv"
        app:layout_constraintRight_toRightOf="@id/gender_question_tv"
        app:layout_constraintTop_toBottomOf="@id/gender_question_tv" />

    <TextView
        android:id="@+id/height_question_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/more_than_standart_margin"
        android:labelFor="@id/height_et"
        android:text="@string/height_question"
        android:textSize="@dimen/standart_header_textsize"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintTop_toBottomOf="@id/gender_spinner" />

    <EditText
        android:id="@+id/height_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/more_than_standart_margin"
        android:autofillHints="170"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@id/height_question_tv"
        app:layout_constraintRight_toRightOf="@id/height_question_tv"
        app:layout_constraintTop_toBottomOf="@id/height_question_tv" />

    <TextView
        android:id="@+id/weight_question_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/more_than_standart_margin"
        android:labelFor="@id/weight_et"
        android:text="@string/weight_question"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/standart_header_textsize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintTop_toBottomOf="@id/height_et" />

    <EditText
        android:id="@+id/weight_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/more_than_standart_margin"
        android:autofillHints="170"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@id/weight_question_tv"
        app:layout_constraintRight_toRightOf="@id/weight_question_tv"
        app:layout_constraintTop_toBottomOf="@id/weight_question_tv"/>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/create_account_btn"
        app:layout_constraintTop_toBottomOf="@id/weight_et"
        app:layout_constraintRight_toRightOf="@id/weight_et"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/weight_et"/>


</androidx.constraintlayout.widget.ConstraintLayout>