<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020. Huawei Technologies Co., Ltd. All rights reserved.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".view.MainFragment">

    <TextView
        android:id="@+id/recipesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/more_than_standart_margin"
        android:fontFamily="sans-serif"
        android:text="@string/recipes"
        android:textSize="@dimen/important_header_textsize"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/recipeRV"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/filterIV"
        android:layout_width="24dp"
        android:layout_height="0dp"
        android:contentDescription="@string/filter_button"
        android:src="@drawable/filter"
        app:layout_constraintTop_toTopOf="@id/recipesTV"
        app:layout_constraintBottom_toBottomOf="@id/recipesTV"
        app:layout_constraintRight_toRightOf="@id/separatorV"/>

    <View
        android:id="@+id/separatorV"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/more_than_standart_margin"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="@id/recipesTV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipesTV" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipeRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:scrollbars="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separatorV" />

    <Button
        android:id="@+id/getDataBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/more_than_standart_margin"
        android:background="@drawable/gray_button_border"
        android:paddingStart="@dimen/more_than_standart_margin"
        android:paddingEnd="@dimen/more_than_standart_margin"
        android:text="@string/find_your_recipe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeRV" />

    <TextView
        android:id="@+id/explanationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:gravity="center"
        android:text="@string/explanation"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/getDataBTN" />

</androidx.constraintlayout.widget.ConstraintLayout>