<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020. Huawei Technologies Co., Ltd. All rights reserved.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ConvenienceDetailFragment">

    <TextView
        android:id="@+id/convenienceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="@dimen/standart_header_textsize"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="convenience-name" />

    <ImageView
        android:id="@+id/convenienceImg"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:src="@drawable/convenience_sample"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convenienceName" />

    <TextView
        android:id="@+id/caloriesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        android:text="@string/calories"
        android:textSize="@dimen/standart_header_textsize"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convenienceImg" />

    <TextView
        android:id="@+id/caloriesValueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        tools:text="2323"
        android:textSize="@dimen/standart_sub_header_textsize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caloriesTV" />

    <TextView
        android:id="@+id/carbohydratesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        android:text="@string/carbohydrates"
        android:textSize="@dimen/standart_header_textsize"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caloriesValueTV" />

    <TextView
        android:id="@+id/carbohydratesValueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        tools:text="2323"
        android:textSize="@dimen/standart_sub_header_textsize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carbohydratesTV" />

    <TextView
        android:id="@+id/proteinTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        android:text="@string/protein"
        android:textSize="@dimen/standart_header_textsize"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carbohydratesValueTV" />

    <TextView
        android:id="@+id/proteinValueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        tools:text="2323"
        android:textSize="@dimen/standart_sub_header_textsize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/proteinTV" />

    <TextView
        android:id="@+id/fatTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        android:text="@string/fat"
        android:textSize="@dimen/standart_header_textsize"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/proteinValueTV" />

    <TextView
        android:id="@+id/fatValueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        tools:text="2323"
        android:textSize="@dimen/standart_sub_header_textsize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fatTV" />

    <Button
        android:id="@+id/addListBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:background="@drawable/rounded_button"
        android:text="@string/add_to_my_diary"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/fatValueTV" />

</androidx.constraintlayout.widget.ConstraintLayout>