<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020. Huawei Technologies Co., Ltd. All rights reserved.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".view.RecipeDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:id="@+id/recipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/more_than_standart_margin"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="@dimen/standart_header_textsize"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="recipe-name" />

    <ImageView
        android:id="@+id/recipeImg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeName" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        android:text="@string/ingredients"
        android:textColor="@color/black"
        android:textSize="@dimen/standart_header_textsize"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/recipeImg" />

    <LinearLayout
        android:id="@+id/linLay"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/standard_margin"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ingredients">

        <ListView
            android:id="@+id/ingredientsLV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/speakBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_volume_down_24"
                android:text="@string/speak" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_location_on_24"/>

                <TextView
                    android:id="@+id/findMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/click_food_to_find_where_you_can_buy_it"
                    android:textSize="14sp" />
            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/speakTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/instructionTV"
        tools:layout_editor_absoluteX="63dp" />

        <LinearLayout
            android:id="@+id/iapLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/speakTxt"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_videocam_24"
                android:layout_marginEnd="@dimen/standard_margin"/>

            <TextView
                android:id="@+id/iapClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_to_watch_recipe_video"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"
                android:textSize="@dimen/standart_sub_header_textsize"
                android:textStyle="bold"
                android:fontFamily="sans-serif"/>

        </LinearLayout>

    <ListView
        android:id="@+id/iapList"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/linLay" />

    <TextView
        android:id="@+id/instructionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/average_margin"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textSize="@dimen/standart_sub_header_textsize"
        app:layout_constraintTop_toBottomOf="@id/iapList"
        tools:text="Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum " />

    <Button
        android:id="@+id/addListBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:background="@drawable/rounded_button"
        android:text="@string/add_to_my_diary"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iapLL" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>