<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020. Huawei Technologies Co., Ltd. All rights reserved.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileFragment">

    <TextView
        android:id="@+id/summaryTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/more_than_standart_margin"
        android:layout_marginTop="@dimen/more_than_standart_margin"
        android:fontFamily="sans-serif"
        android:text="@string/summary"
        android:textSize="@dimen/important_header_textsize"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separatorV"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/more_than_standart_margin"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="@id/summaryTV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summaryTV" />

    <TextView
        android:id="@+id/caloriesCalculationInfoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/recommend"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/neededCaloriesValueTV" />

    <TextView
        android:id="@+id/neededCaloriesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="sans-serif"
        android:text="@string/status_of_needed_calories_today"
        android:textSize="@dimen/standart_header_textsize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separatorV" />

    <TextView
        android:id="@+id/neededCaloriesValueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:textSize="@dimen/standart_header_textsize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/neededCaloriesTV"
        tools:text="1100/2300" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/summaryRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/standard_margin"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/separatorV"
        app:layout_constraintRight_toRightOf="@id/separatorV"
        app:layout_constraintTop_toBottomOf="@id/caloriesCalculationInfoTV" />

</androidx.constraintlayout.widget.ConstraintLayout>